# GrainSTEM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
grainstem/: __init__.py
grainstem/grain_segmentation/: README.md  __init__.py
grainstem/strain_mapping/: 01_strain_analysis.ipynb  README.md  __init__.py
notebooks/: Part1_grain_segmentation.ipynb  Part2_defect_classification_and_stats.ipynb
